# point_cloud_detect

./: CMakeLists.txt  README.md
data/: close.pcd  open.pcd
data/3d/: colors_move_1567153295548688.pcd  colors_move_1567153295615528.pcd  colors_move_1567153295683140.pcd  colors_move_1567153295749881.pcd  colors_move_1567153295816625.pcd  colors_move_1567153295882307.pcd  colors_move_1567153295949859.pcd  colors_move_1567153296015784.pcd  colors_move_1567153296083388.pcd  colors_move_1567153296150061.pcd  colors_move_1567153296216152.pcd  colors_move_1567153296283538.pcd  colors_move_1567153296349567.pcd  colors_move_1567153296417205.pcd  colors_move_1567153296482843.pcd  colors_move_1567153296550438.pcd  colors_move_1567153296617240.pcd  colors_move_1567153296683957.pcd  colors_move_1567153296749584.pcd  colors_move_1567153296817466.pcd  colors_move_1567153296884134.pcd  colors_move_1567153296950814.pcd  colors_move_1567153297016792.pcd  colors_move_1567153297083577.pcd  colors_move_1567153297150942.pcd  colors_move_1567153297216762.pcd  colors_move_1567153297284380.pcd  colors_move_1567153297350376.pcd  colors_move_1567153297417868.pcd  colors_move_1567153297484573.pcd  colors_move_1567153297551344.pcd  colors_move_1567153297618009.pcd  colors_move_1567153297683976.pcd  colors_move_1567153297751373.pcd  colors_move_1567153297817422.pcd  colors_move_1567153297884868.pcd  colors_move_1567153297950576.pcd  (+74 more)
src/: extract_indices.cpp  new_method.cpp  pcl_visualizer_demo.cpp  region_clustering.cpp  region_growing_rgb_segmentation.cpp  view.cpp
